<resources>
    <string name="app_name">Timbre</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome2">Logare cu succes</string>
    <string name="add">add</string>
    <string name="inregistreaza_te">inregistreaza-te</string>
    <string name="e_mail">e-mail</string>
    <string name="parola">parola</string>
    <string name="utilizator_nou">utilizator nou</string>
    <string name="filtreaz">filtrează</string>
    <string name="adaug_monede">Adaugă monede</string>
    <string name="adaug_timbre">Adaugă timbre</string>
    <string name="nume_timbru">nume timbru</string>
    <string name="exporta">exporta</string>
    <string name="title_activity_maps">Map</string>
    <string name="harta">Harta</string>
    <string name="despre">Despre</string>
    <string name="ie_ire">Ieșire</string>
    <string name="favorite">Favorite</string>
    <string name="logare">Logare</string>
    <string name="logare_guest">Logare guest</string>
    <string name="lista">Lista</string>
    <string name="valoare">Valoare</string>
    <string name="nume">Nume</string>
    <string name="timbru_nou">TIMBRU NOU</string>
    <string name="seria">Seria</string>
    <string name="tematica">Tematica</string>
    <string name="an">An</string>
    <string name="marime">Marime</string>
    <string name="adaug">Adaugă</string>
    <string name="textview">TextView</string>
    <string name="napoi">Înapoi</string>
    <string name="user">user</string>
    <string name="salveaxz">Salvează</string>
    <string name="sterge_contul">Sterge contul</string>
    <string name="empty" />
</resources>
