<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">
    tools:context=".ui.ui.MonedeActivity">

    <TextView
        android:layout_width="199dp"
        android:layout_height="80dp"
        android:background="@drawable/round"
        android:gravity="center"
        android:text="MONEDA NOUA"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/etNume"
            android:layout_width="146dp"
            android:layout_height="30dp"
            android:layout_marginBottom="50px"
            android:background="@drawable/round"
            android:gravity="center"
            android:hint="@string/nume"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etAn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50px"
            android:background="@drawable/round"
            android:gravity="center"
            android:hint="@string/an"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etValoare"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50px"
            android:background="@drawable/round"
            android:gravity="center"
            android:hint="@string/valoare"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:layout_marginBottom="50px"
            android:background="@color/colorPrimaryDark"
            android:text="@string/adaug"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/round"
        android:text="@string/napoi"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btLista"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/round"
        android:text="@string/lista"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>